manifests/validating-webhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
    name: image-validation-admission
    namespace: registry-system
webhooks:
    - name: image-validation-admission.tmax-cloud.github.com
      clientConfig:
        service:
            name: image-validation-admission-svc
            path: "/validate"
            namespace: registry-system
            port: 443
        caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1ERXdOekF3TlRjeE9Wb1hEVE14TURFd05UQXdOVGN4T1Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS0trCmpDcnBOZ2FhUHlxRm8xeXM0YktBS2xRUGhFMDhnUTVTV3ZNRmoxMC96NlE1elpKaG1xdzI1Zy9ybDBRbjNwSHoKaEYrQ3MzMUs0QjZUbngyTnNxRzhmd3FVNVF3Sm9ZOWN6ZklYN2FEbGMyNnQ5RnQ2d05kZENROHV2WG5HNStKTwpmUHpGNmR3Qm [...]
      rules:
        - operations: ["CREATE"]
          apiGroups: ["*"]
          apiVersions: ["*"]
          resources:
            - "pods"
      failurePolicy: Fail
      matchPolicy: Equivalent
